[tool.poetry]
name = "telegram_wainh_bot"
version = "0.1.0"
description = "telegram bot game"
authors = ["Mazur Gleb <mazur.gleb2010@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mypy = "*"
flake8 = "^3.9.0"
loguru = "^0.5.3"
django-environ = "^0.4.5"
isort = "^5.8.0"
aiogram = "^2.18"
SQLAlchemy = "^1.4.29"
SQLAlchemy-Utils = "^0.38.2"
python-decouple = "^3.5"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
